# LL1-Generator

./: .gitignore  CMakeLists.txt  input.txt  main.cpp
modules/: TableRow.h  ll1_table.csv
modules/GrammarOptimizer/: CMakeLists.txt  Dictionary.cpp  Dictionary.h  GrammarOptimizer.h  Symbol.h
modules/Lexer/: CMakeLists.txt
modules/Lexer/Lexer/: Lexer.cpp  Lexer.h
modules/Lexer/Token/: Token.h  TokenType.h  TokenUtils.h
modules/SyntacticRecognizer/: CMakeLists.txt
modules/SyntacticRecognizer/CSVParser/: CSVParser.cpp  CSVParser.h
modules/SyntacticRecognizer/SyntacticRecognizer/: SyntacticRecognizer.cpp  SyntacticRecognizer.h
modules/SyntacticRecognizer/TokensConnector/: TokensConnector.h
modules/TableGenerator/: CMakeLists.txt  main.cpp
modules/TableGenerator/Data/: Grammar.h  Table.h
modules/TableGenerator/Generator/: TableGenerator.cpp  TableGenerator.h
modules/TableGenerator/Parser/: GrammarParser.cpp  GrammarParser.h
modules/TableGenerator/Processor/: GrammarProcessor.cpp  GrammarProcessor.h
modules/TableGenerator/Utils/: TableExporter.h  Utils.h
tests/: CMakeLists.txt  CSVParser.cpp  Lexer.cpp  TableGenerator.cpp
